force-app/main/default/objects/Publico_target_interes__c/Publico_target_interes__c.object-meta.xml
<CustomObject>
    <label>Publico target interes</label>
    <nameField>
        <displayFormat>PTI-{000000}</displayFormat>
        <label>Nombre de Publico target interes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publico target intereses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>