force-app/main/default/objects/Publico_target_interes__c/fields/Interes_del_publico__c.field-meta.xml
<CustomField>
    <fullName>Interes_del_publico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interes del publico</label>
    <referenceTo>Intereses_del_publico__c</referenceTo>
    <relationshipLabel>Publico target intereses</relationshipLabel>
    <relationshipName>Publico_target_intereses</relationshipName>
    <type>Lookup</type>
</CustomField>