force-app/main/default/objects/Publico_target_interes__c/fields/Prioridad_del_interes__c.field-meta.xml
<CustomField>
    <fullName>Prioridad_del_interes__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Introducir un valor entre 1 y 10 donde 10 es el mas prioritario.</description>
    <inlineHelpText>Introducir un valor entre 1 y 10 donde 10 es el mas prioritario.</inlineHelpText>
    <label>Prioridad del interes</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>