force-app/main/default/objects/Publico_target_interes__c/fields/Publico_target__c.field-meta.xml
<CustomField>
    <fullName>Publico_target__c</fullName>
    <label>Publico target</label>
    <referenceTo>Publico_target__c</referenceTo>
    <relationshipLabel>Publico target intereses</relationshipLabel>
    <relationshipName>Publico_target_intereses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>